<resources>
    <string name="app_name">TechSale</string>
    <string name="settings">Settings</string>

    <string name="category_theme_title">Theme</string>
    <string name="change_theme">Change theme</string>
    <string name="change_to_dark_theme">Change to dark theme</string>
    <string name="change_to_light_theme">Change to light theme</string>

    <string name="category_currency_title">Currency</string>
    <string name="summary_currency">Select currency which you prefer</string>
    <string name="currency_title">Default currency</string>

    <string name="category_notifications_title">Notifications</string>
    <string name="set_notifications">Set notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="disable_notifications">Disable notifications</string>

    <string name="category_address_title">Address</string>
    <string name="address_card_title">Default Address</string>
    <string name="summary_address">Enter Your Address For Orders</string>

    <string name="currency_euro">Euros</string>
    <string name="currency_dollar">Dollars</string>
    <string name="currency_pound">Pounds</string>
    <string name="currency_ruble">Rubles</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="welcome">Welcome to TechSale</string>
    <string name="add_to_cart">Add to Cart</string>

    <string name="register_wizard">Dont have an account, you can create account now</string>
    <string name="credit_card">Credit card number</string>
    <string name="expiration_date">Expiration date</string>

    <string name="cart">Cart(0)</string>
    <string name="payment">Pay(0.00)</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="total_price">Total: 0.00</string>
    <string name="pay">Pay</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_order_list">Orders</string>
    <string name="title_order_detail">Order Detail</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="username">Username</string>
    <string name="orders">Your Orders</string>
    <string name="create_order">Create Order</string>

</resources>
