<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"

    android:scrollbars="none">

    <android.support.v7.preference.PreferenceCategory
        android:key="themeCategoryKey"
        android:title="@string/category_theme_title">

        <SwitchPreferenceCompat
            android:key="themeKey"
            android:summaryOff="@string/change_to_dark_theme"
            android:summaryOn="@string/change_to_light_theme"
            android:title="@string/change_theme" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:key="currencyKeyCategory"
        android:title="@string/category_currency_title">

        <ListPreference
            android:defaultValue="euro"
            android:entries="@array/languagesList"
            android:entryValues="@array/languagesValues"
            android:key="currencyKey"
            android:summary="@string/summary_currency"
            android:title="@string/currency_title" />
    </android.support.v7.preference.PreferenceCategory>

</PreferenceScreen>